# server/src/Routes/AuthRoutes.js
@@ -7,5 +7,8 @@ const authRouter = express.Router();
 authRouter.route("/auth/register-user").post(AuthControllers.registerUser);
 authRouter.route("/auth/login").post(AuthControllers.loginUser)
 authRouter.route("/get-all-languages").get(AuthControllers.getAllLanguages)
+authRouter.route("/get-all-colleges").get(AuthControllers.getAllColleges)
+authRouter.route("/get-all-schools").get(AuthControllers.getAllSchools)
+
 
 module.exports = authRouter;
