# social_web/src/config/urls.ts
@@ -11,3 +11,5 @@ export const GET_USER_DETAIL = getApiUrl("/api/get-user-detail")
 export const ADD_NEW_POST = getApiUrl("/api/add-new-post")
 export const LOG_OUT = getApiUrl("/api/logout")
 export const GET_ALL_POSTS = getApiUrl("/api/get-all-posts")
+export const GET_ALL_SCHOOLS = getApiUrl("/api/get-all-schools")
+
